--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -2684,6 +2684,14 @@
                 }
             }
 
+            if (global::BaseDatos.Usuarios.Buscar.RolDios(usuarioId) == true)
+            {
+                if (string.IsNullOrEmpty(juego.IdXbox) == false)
+                {
+                    APIs.XboxGamePass.Juego.XboxDatos(juego.IdXbox);
+                }
+            }
+
             if (juego.CuratorsSteam != null)
             {
                 if (juego.CuratorsSteam.Count > 0)
