--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -269,6 +269,22 @@
 
 				<div style="display: flex; align-items: center;">
 					<div style="width: 15%; padding: 0px 30px; text-align: right;">
+					</div>
+
+					<div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+						<button @onclick="(async () => await ActualizarXboxApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
+							Actualizar Xbox
+						</button>
+
+						@if (juego.Xbox != null)
+						{
+							<label>@juego.Xbox.Fecha.ToString()</label>
+						}
+					</div>
+				</div>
+
+				<div style="display: flex; align-items: center;">
+					<div style="width: 15%; padding: 0px 30px; text-align: right;">
 						<label>Tipo</label>
 					</div>
 					<div style="width: 20%;">
@@ -848,6 +864,14 @@
 		juego.Idiomas = await APIs.EpicGames.Juego.EpicGamesIdiomas(juego.SlugEpic, juego.Idiomas);
 
 		global::BaseDatos.Juegos.Actualizar.EpicGames(juego);
+	}
+
+	private async Task ActualizarXboxApi()
+	{
+		juego.Xbox = await APIs.XboxGamePass.Juego.XboxDatos(juego.IdXbox);
+		juego.Idiomas = await APIs.XboxGamePass.Juego.XboxIdiomas(juego.IdXbox, juego.Idiomas);
+
+		global::BaseDatos.Juegos.Actualizar.Xbox(juego);
 	}
 
 	private string tipo = string.Empty;
